git-svn-id: http://canopus:81/svn/Tangra3/trunk@20 7d10f0b8-8c12-1b4f-80cc-3612f3cb94e2

--- a/Tangra.Model/Tangra.Model.csproj
+++ b/Tangra.Model/Tangra.Model.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Astro\StarFinder.cs" />
     <Compile Include="Astro\PSFFit.cs" />
     <Compile Include="Config\AdvsSettings.cs" />
+    <Compile Include="Config\OCRConfigEntry.cs" />
     <Compile Include="Config\TangraConfig.cs" />
     <Compile Include="Context\ApplicationContext.cs" />
     <Compile Include="Context\RenderFrameContext.cs" />
@@ -70,6 +71,8 @@
     <Compile Include="Helpers\AngleUtility.cs" />
     <Compile Include="Helpers\AstroConvert.cs" />
     <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="Helpers\PositionMemento.cs" />
+    <Compile Include="Helpers\ThreadingHelper.cs" />
     <Compile Include="ImageTools\ImageTool.cs" />
     <Compile Include="ImageTools\ObjectClickEventArgs.cs" />
     <Compile Include="Image\Convolution.cs" />
@@ -84,6 +87,7 @@
     <Compile Include="Astro\frmPSFViewer.Designer.cs">
       <DependentUpon>frmPSFViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Numerical\GaussianFit.cs" />
     <Compile Include="Numerical\Integration.cs" />
     <Compile Include="Numerical\LinearRegression.cs" />
     <Compile Include="Numerical\SafeMatrix.cs" />
