--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -127,6 +127,12 @@
     <Compile Include="frmAbout.Designer.cs">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmFITSHeader.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFITSHeader.Designer.cs">
+      <DependentUpon>frmFITSHeader.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -152,6 +158,7 @@
       <DependentUpon>frmTargetPSFViewerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\ApplicationSettingsSerializer.cs" />
+    <Compile Include="Helpers\DuplicateFrameAvoider.cs" />
     <Compile Include="Helpers\Extensions.cs" />
     <Compile Include="Helpers\NotificationManager.cs" />
     <Compile Include="Helpers\TangraEnvironment.cs" />
@@ -162,6 +169,14 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\CustomCursors.cs" />
+    <Compile Include="VideoOperations\FrameAdjustmentsPreview.cs" />
+    <Compile Include="VideoOperations\frmFullSizePreview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\frmFullSizePreview.Designer.cs">
+      <DependentUpon>frmFullSizePreview.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\AveragedFrame.cs" />
     <Compile Include="VideoOperations\LightCurves\DisplayBitmapConverter.cs" />
     <Compile Include="VideoOperations\LightCurves\frmAddOrEditSingleTarget.cs">
       <SubType>Form</SubType>
@@ -223,6 +238,12 @@
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmBackgroundHistograms.Designer.cs">
       <DependentUpon>frmBackgroundHistograms.cs</DependentUpon>
     </Compile>
+    <Compile Include="VideoOperations\LightCurves\InfoForms\frmCompleteReductionInfoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\InfoForms\frmCompleteReductionInfoForm.Designer.cs">
+      <DependentUpon>frmCompleteReductionInfoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\InfoForms\frmNoiseDistribution.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -255,6 +276,7 @@
     <Compile Include="VideoOperations\LightCurves\LCStateSelectMeasuringStars.cs" />
     <Compile Include="VideoOperations\LightCurves\LCStateViewingLightCurve.cs" />
     <Compile Include="VideoOperations\LightCurves\LightCurveReductionContext.cs" />
+    <Compile Include="VideoOperations\LightCurves\Measurements\GroupMeasurer.cs" />
     <Compile Include="VideoOperations\LightCurves\ReduceLightCurveOperation.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OccultationTracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\OneStarTracker.cs" />
@@ -263,6 +285,12 @@
     <Compile Include="VideoOperations\LightCurves\Tracking\Tracker.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\TrackerFactory.cs" />
     <Compile Include="VideoOperations\LightCurves\Tracking\UntrackedTracker.cs" />
+    <Compile Include="VideoOperations\LightCurves\ucLCFileInfo.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="VideoOperations\LightCurves\ucLCFileInfo.Designer.cs">
+      <DependentUpon>ucLCFileInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="VideoOperations\LightCurves\ucLightCurves.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -307,6 +335,7 @@
     <Compile Include="Video\AstroDigitalVideo\Interfaces.cs" />
     <Compile Include="Video\AstroDigitalVideo\UI\AdvTagValuePair.cs" />
     <Compile Include="Video\FramePlayer.cs" />
+    <Compile Include="Video\SingleBitmapFileFrameStream.cs" />
     <Compile Include="Video\VideoStream.cs" />
     <Compile Include="View\VideoFileView.cs" />
     <Compile Include="View\ZoomedImageView.cs" />
@@ -343,6 +372,9 @@
     <EmbeddedResource Include="frmAbout.resx">
       <DependentUpon>frmAbout.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="frmFITSHeader.resx">
+      <DependentUpon>frmFITSHeader.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
@@ -365,6 +397,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="VideoOperations\frmFullSizePreview.resx">
+      <DependentUpon>frmFullSizePreview.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\frmAddOrEditSingleTarget.resx">
       <DependentUpon>frmAddOrEditSingleTarget.cs</DependentUpon>
     </EmbeddedResource>
@@ -392,6 +427,9 @@
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmBackgroundHistograms.resx">
       <DependentUpon>frmBackgroundHistograms.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmCompleteReductionInfoForm.resx">
+      <DependentUpon>frmCompleteReductionInfoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmNoiseDistribution.resx">
       <DependentUpon>frmNoiseDistribution.cs</DependentUpon>
     </EmbeddedResource>
@@ -403,6 +441,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\InfoForms\frmZoomedPixels.resx">
       <DependentUpon>frmZoomedPixels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VideoOperations\LightCurves\ucLCFileInfo.resx">
+      <DependentUpon>ucLCFileInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="VideoOperations\LightCurves\ucLightCurves.resx">
       <DependentUpon>ucLightCurves.cs</DependentUpon>
@@ -455,6 +496,10 @@
     <Content Include="tangra-big.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CSharpFITS\CSharpFITS.csproj">
+      <Project>{93C93A99-D18F-495E-8AC9-6B6F6F7F273E}</Project>
+      <Name>CSharpFITS</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Tangra.Model\Tangra.Model.csproj">
       <Project>{70BBC9A7-7DD9-4A4D-B972-6665C65875C6}</Project>
       <Name>Tangra.Model</Name>
