--- a/Tangra 3/app.config
+++ b/Tangra 3/app.config
@@ -15,4 +15,29 @@
             </setting>
         </Tangra.Properties.Settings>
     </userSettings>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="TangraErrorSinkSoap" closeTimeout="00:01:00" openTimeout="00:01:00"
+                    receiveTimeout="00:10:00" sendTimeout="00:01:00" allowCookies="false"
+                    bypassProxyOnLocal="false" hostNameComparisonMode="StrongWildcard"
+                    maxBufferSize="65536" maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
+                    messageEncoding="Text" textEncoding="utf-8" transferMode="Buffered"
+                    useDefaultWebProxy="true">
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+                        maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <security mode="None">
+                        <transport clientCredentialType="None" proxyCredentialType="None"
+                            realm="" />
+                        <message clientCredentialType="UserName" algorithmSuite="Default" />
+                    </security>
+                </binding>
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://208.106.227.157/CGI-BIN/TangraErrors/ErrorReports.asmx"
+                binding="basicHttpBinding" bindingConfiguration="TangraErrorSinkSoap"
+                contract="TangraService.TangraErrorSinkSoap" name="TangraErrorSinkSoap" />
+        </client>
+    </system.serviceModel>
 </configuration>
