Added preliminary support for AAV files in Tangra.Core
git-svn-id: http://canopus:81/svn/Tangra3/trunk@29 7d10f0b8-8c12-1b4f-80cc-3612f3cb94e2

--- a/Tangra.Video/Windows/Tangra.Video.vcxproj
+++ b/Tangra.Video/Windows/Tangra.Video.vcxproj
@@ -141,7 +141,7 @@ xcopy "$(ProjectDir)lib\$(Configuration)\TangraCore.dll" "$(SolutionDir)Tangra 3
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>.\lib\Release;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>.\lib\Release;D:\Program Files\Microsoft SDKs\Windows\v6.0\Lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>Vfw32.lib;Strmiids.lib;TangraCoredll.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ModuleDefinitionFile>TangraVideo.def</ModuleDefinitionFile>
     </Link>
