git-svn-id: http://canopus:81/svn/Tangra3/trunk@33 7d10f0b8-8c12-1b4f-80cc-3612f3cb94e2

--- a/Tangra 3/Tangra 3.Windows.csproj
+++ b/Tangra 3/Tangra 3.Windows.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Helpers\ApplicationSettingsSerializer.cs" />
     <Compile Include="Helpers\DuplicateFrameAvoider.cs" />
     <Compile Include="Helpers\Extensions.cs" />
+    <Compile Include="Helpers\FITSHelper.cs" />
     <Compile Include="Helpers\NotificationManager.cs" />
     <Compile Include="Helpers\TangraEnvironment.cs" />
     <Compile Include="ImageTools\ArrowTool.cs" />
@@ -399,6 +400,7 @@
     </Compile>
     <Compile Include="Video\AstroDigitalVideo\Interfaces.cs" />
     <Compile Include="Video\AstroDigitalVideo\UI\AdvTagValuePair.cs" />
+    <Compile Include="Video\SingleFITSFileFrameStream.cs" />
     <Compile Include="Video\FramePlayer.cs" />
     <Compile Include="Video\frmJumpToFrame.cs">
       <SubType>Form</SubType>
