Small updated to the AAV processing. Added a bunch of items to .gitignore
git-svn-id: http://canopus:81/svn/Tangra3/trunk@35 7d10f0b8-8c12-1b4f-80cc-3612f3cb94e2

--- a/Tangra.Video/Windows/Tangra.Video.vcxproj
+++ b/Tangra.Video/Windows/Tangra.Video.vcxproj
@@ -78,6 +78,7 @@
     <LinkIncremental>false</LinkIncremental>
     <TargetName>TangraVideo</TargetName>
     <OutDir>$(ProjectDir)$(Configuration)\</OutDir>
+    <IncludePath>D:\Program Files\Microsoft SDKs\Windows\v6.0\Include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
